Fixed the bugs in overlapping FAQ section

--- a/src/pages/SimpleWayToSendMoney/index.module.scss
+++ b/src/pages/SimpleWayToSendMoney/index.module.scss
@@ -89,6 +89,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: -430px;
+  height: 1350px;
   @media screen and (max-width: 992px) {
     flex-direction: column;
     margin-bottom: 0px;
